fix(home) adjust overflow rules for home page layout

--- a/src/wp-content/themes/grossartig/scss/header.scss
+++ b/src/wp-content/themes/grossartig/scss/header.scss
@@ -13,6 +13,10 @@
     margin: auto;
   }
 
+  &--type-page {
+    position: initial;
+  }
+
   &--type-post {
     display: grid;
     grid-template-columns: 50% 50%;
