--- a/src/wp-content/themes/grossartig/scss/home.scss
+++ b/src/wp-content/themes/grossartig/scss/home.scss
@@ -1,6 +1,8 @@
 @import "_colors";
 
 .home {
+  overflow-x: hidden;
+
   marquee {
     color: $primary-color-inverted;
     background-color: $background-inverted;
